# Spectra

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_STATE.md  README.md  audio-analyzer.spec  lang.py  main.py  pyproject.toml  requirements.txt  run.bat  run_check.py  spectra.spec
.claude/: settings.local.json
.github/workflows/: ci.yml
Spectra/: README.md  main.py
Spectra/analyzer/: __init__.py  core.py  metadata.py
Spectra/ui/: main_window.py  progress_bar.py  spectrogram_widget.py
analyzer/: __init__.py  _state.py  batch.py  core.py  load.py  metadata.py  palette.py  quality.py  spectrogram.py  spectrum.py
tests/: test_analyzer.py  test_main_window.py
ui/: __init__.py  batch_dialog.py  main_window.py  metadata_panel.py  playback_engine.py  progress_bar.py  spectrogram_panel.py  spectrogram_widget.py  styles.py  theme.py  waveform_widget.py
ui/shaders/: spectrogram.frag  spectrogram.vert
