[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra"
version = "0.1.0"
description = "本地音频分析工具：元数据 + 频谱图可视化"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "mutagen>=1.47",
    "librosa>=0.10",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "soundfile>=0.12",
    "pyfftw>=0.14",
    "av>=12.0",
    "pyloudnorm>=0.1.0",
]

[project.gui-scripts]
spectra = "main:main"
